--- a/gb/19/7/10/n11376310.md
+++ b/gb/19/7/10/n11376310.md
@@ -1,52 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¡°ÆæÒì²©Ê¿¡±°çÑÝ°®µÏÉú ÉÏ¿Î¶ñ²¹¿ÆÑ§ÖªÊ¶</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/0710-2-600x400.jpg" />
-<h6>µçÓ°¡¶µçÁ÷´óÕ½¡·£¨The Current War£©¾çÕÕ¡££¨CATCHPLAYÌá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cqgugh3693/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/cqgugh3693/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/cqgugh3693/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>â€œå¥‡å¼‚åšå£«â€æ‰®æ¼”çˆ±è¿ªç”Ÿ ä¸Šè¯¾æ¶è¡¥ç§‘å­¦çŸ¥è¯†</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/0710-2-600x400.jpg" />
+<h6>ç”µå½±ã€Šç”µæµå¤§æˆ˜ã€‹ï¼ˆThe Current Warï¼‰å‰§ç…§ã€‚ï¼ˆCATCHPLAYæä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ10ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÖ£ÒË·Ò±¨µ¼£©ÉíÎª¡°Ìì²Å×¨Òµ»§¡±ÑÝÔ±µÄ°àÄáµÒ¿Ë?<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%BA%B7%E6%9F%8F%E6%8B%9C%E5%8C%BA.md">¿µ°Ø°ÝÇø</a>£¨Benedict Cumberbatch£©¼ÌÊÎÑÝ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%A5%87%E5%BC%82%E5%8D%9A%E5%A3%AB.md">ÆæÒì²©Ê¿</a>¡¢¸£¶ûÄ¦Ë¹¡¢»ô½ðµÈ½ÇÉ«ºó£¬ÔÚÐÂÆ¬¡¶<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%94%B5%E6%B5%81%E5%A4%A7%E6%88%98.md">µçÁ÷´óÕ½</a>¡·£¨The Current War£©Ú¹ÊÍ·¢Ã÷¿ñÈË<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%88%B1%E8%BF%AA%E7%94%9F.md">°®µÏÉú</a>£¬ÌØ±ðÉÏ¿Î¶ñ²¹¿ÆÑ§ÖªÊ¶¡£<br />
-<figure id="attachment_11376337" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/07/0710-3.jpg"><img src="http://i.epochtimes.com/assets/uploads/2019/07/0710-3-600x401.jpg" alt="µçÓ°¡¶µçÁ÷´óÕ½¡·£¨The Current War£©" width="600" b="401" class="size-large wp-image-11376337" /></a><figcaption class="wp-caption-text">µçÓ°¡¶<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%94%B5%E6%B5%81%E5%A4%A7%E6%88%98.md">µçÁ÷´óÕ½</a>¡·£¨The Current War£©¾çÕÕ¡££¨CATCHPLAYÌá¹©£©</figcaption></figure></p>
-<p>28ËêµÄÓ¢¹úÄÐÑÝÔ±Äá¿ÉÀ­Ë¹?»ôÌØ£¨Nicholas Hoult£©ÔÚÆ¬ÖÐÊÎÑÝÌì²Å¿ÆÑ§¼Ò<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md">ÌØË¹À­</a>£¬Óë<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%88%B1%E8%BF%AA%E7%94%9F.md">°®µÏÉú</a>ÔÚ²»Í¬µÄµçÁ¦ÏµÍ³ÉÏÏà»¥½ÇÁ¦£¬Ï·ÍâÁ½Î»ÑÝÔ±ÔòÒªÒ»ÆðÉÏ¿Î£¬¿Î³ÌÒ»¿ªÊ¼¾ÍÆµÆµ·¢ÎÊ£¬Äá¿ÉÀ­Ë¹?»ôÌØËµ£º¡°ÎÒÃÇÒ»Ö±·´¸´ÎÊ²»¶®µÄµØ·½£¬Ö±µ½ÍêÈ«Åª¶®ÎªÖ¹£¬ÀÏÊ¦¿ÉÄÜ¶¼¾õµÃÓÐµã·³£¬µ«»¹ºÃÓÐÉÏ¿Î£¬²ÅÄÜÁË½âÂúÊÇ¿ÆÑ§×¨ÓÐÃû´ÊµÄÌ¨´Ê¡£¡±</p>
-<p>ÓÉÓÚ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md">ÌØË¹À­</a>±¾ÉíÊÇ×²Çò¸ßÊÖ£¬³ýÁË¿ÆÑ§¿Î³Ì£¬»ôÌØÒ²±ØÐëÉÏ×²Çò¿ÎÀ´¾«Êì¼¼ÇÉ£¬Ö»ÊÇËû¼´Ê¹ÈÏÕæ¿àÁ·£¬ÉÏ³¡Ê±ÒÀÈ»²ÒÊäÍ¬¾çÑÝÔ±Âó¿É?ÏÄÙ¯£¬»ôÌØÐ¦Ëµ£º¡°ÎÒÓÐÒ»³¡Ï·Òª¸úÂó¿ÉÒ»Æð´ò×²Çò£¬²ÊÅÅÊ±Ëû¾ÍÒ»Á¬´ò³öºÃÇò£¬ÎÒ¼´Ê¹ÓÐ½ÌÁ·Åã×Å¶ñ²¹»¹ÊÇÔ¶²»¼°Ëû¡£¡±</p>
-<figure id="attachment_11376336" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/07/0710-1.jpg"><img src="http://i.epochtimes.com/assets/uploads/2019/07/0710-1-600x401.jpg" alt="µçÓ°¡¶µçÁ÷´óÕ½¡·£¨The Current War£©" width="600" b="401" class="size-large wp-image-11376336" /></a><figcaption class="wp-caption-text">µçÓ°¡¶µçÁ÷´óÕ½¡·£¨The Current War£©¾çÕÕ¡££¨CATCHPLAYÌá¹©£©</figcaption></figure>
-<p>¸ÃÆ¬¿¨Ë¾¼¯½á¡°<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%A5%87%E5%BC%82%E5%8D%9A%E5%A3%AB.md">ÆæÒì²©Ê¿</a>¡±°àÄáµÒ¿Ë?<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%BA%B7%E6%9F%8F%E6%8B%9C%E5%8C%BA.md">¿µ°Ø°ÝÇø</a>£¨Benedict Cumberbatch£©¡¢¡°XÕ½¾¯Ò°ÊÞ¡±Äá¿ÉÀ­Ë¹?»ôÌØ£¨Nicholas Hoult£©¡¢¡°Ð¡Ö©Öë¡±ÌÀÄ·?»ôÀ¼µÂ£¨Tom Holland£©ºÍÂó¿É?ÏÄÙ¯£¨Michael Shannon£©µÈÈË¡£</p>
-<p>µçÓ°¾çÇéÃèÊö19ÊÀ¼Í°®µÏÉú¡¢ÌØË¹À­ÓëÎ÷ÎÝµçÆø´´°ìÈËÍþË¹Í¡ºÀË¹Ö®¼äÒ°ÐÄ²ª²ªµÄÉÌ³¡Ö®Õù£¬ÓÉ½ð½±Ãûµ¼Âí¶¡?Ê·¿ÂÎ÷Ë¹£¨Martin Scorsese£©¼àÖÆ¡¢°¬·½Ë÷?¸êÃ·×È?À×Çí£¨Alfonso Gomez-Rejon£©Ö´µ¼¡£¸ÃÆ¬½«ÓÚ7ÔÂ19ÈÕÔÚÌ¨ÍåÉÏÓ³¡£</p>
-<p>ÔðÈÎ±à¼­£ºÐÁÓ×°²</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ10æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…éƒ‘å®œèŠ¬æŠ¥å¯¼ï¼‰èº«ä¸ºâ€œå¤©æ‰ä¸“ä¸šæˆ·â€æ¼”å‘˜çš„ç­å°¼ç‹„å…‹?<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E5%BA%B7%E6%9F%8F%E6%8B%9C%E5%8C%BA.md#1">åº·æŸæ‹œåŒº</a>ï¼ˆBenedict Cumberbatchï¼‰ç»§é¥°æ¼”<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E5%A5%87%E5%BC%82%E5%8D%9A%E5%A3%AB.md#1">å¥‡å¼‚åšå£«</a>ã€ç¦å°”æ‘©æ–¯ã€éœé‡‘ç­‰è§’è‰²åŽï¼Œåœ¨æ–°ç‰‡ã€Š<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%94%B5%E6%B5%81%E5%A4%A7%E6%88%98.md#1">ç”µæµå¤§æˆ˜</a>ã€‹ï¼ˆThe Current Warï¼‰è¯ é‡Šå‘æ˜Žç‹‚äºº<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%88%B1%E8%BF%AA%E7%94%9F.md#1">çˆ±è¿ªç”Ÿ</a>ï¼Œç‰¹åˆ«ä¸Šè¯¾æ¶è¡¥ç§‘å­¦çŸ¥è¯†ã€‚</p>
+<figure id="attachment_11376337" aria-describedby="caption-attachment-11376337" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/0710-3.jpg"><img class="size-large wp-image-11376337" src="https://i.epochtimes.com/assets/uploads/2019/07/0710-3-600x401.jpg" alt="ç”µå½±ã€Šç”µæµå¤§æˆ˜ã€‹ï¼ˆThe Current Warï¼‰" width="600" b="401" /></a><figcaption id="caption-attachment-11376337" class="wp-caption-text">ç”µå½±ã€Š<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%94%B5%E6%B5%81%E5%A4%A7%E6%88%98.md#1">ç”µæµå¤§æˆ˜</a>ã€‹ï¼ˆThe Current Warï¼‰å‰§ç…§ã€‚ï¼ˆCATCHPLAYæä¾›ï¼‰</figcaption></figure>
+<p>28å²çš„è‹±å›½ç”·æ¼”å‘˜å°¼å¯æ‹‰æ–¯?éœç‰¹ï¼ˆNicholas Houltï¼‰åœ¨ç‰‡ä¸­é¥°æ¼”å¤©æ‰ç§‘å­¦å®¶<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">ç‰¹æ–¯æ‹‰</a>ï¼Œä¸Ž<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%88%B1%E8%BF%AA%E7%94%9F.md#1">çˆ±è¿ªç”Ÿ</a>åœ¨ä¸åŒçš„ç”µåŠ›ç³»ç»Ÿä¸Šç›¸äº’è§’åŠ›ï¼Œæˆå¤–ä¸¤ä½æ¼”å‘˜åˆ™è¦ä¸€èµ·ä¸Šè¯¾ï¼Œè¯¾ç¨‹ä¸€å¼€å§‹å°±é¢‘é¢‘å‘é—®ï¼Œå°¼å¯æ‹‰æ–¯?éœç‰¹è¯´ï¼šâ€œæˆ‘ä»¬ä¸€ç›´åå¤é—®ä¸æ‡‚çš„åœ°æ–¹ï¼Œç›´åˆ°å®Œå…¨å¼„æ‡‚ä¸ºæ­¢ï¼Œè€å¸ˆå¯èƒ½éƒ½è§‰å¾—æœ‰ç‚¹çƒ¦ï¼Œä½†è¿˜å¥½æœ‰ä¸Šè¯¾ï¼Œæ‰èƒ½äº†è§£æ»¡æ˜¯ç§‘å­¦ä¸“æœ‰åè¯çš„å°è¯ã€‚â€</p>
+<p>ç”±äºŽ<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">ç‰¹æ–¯æ‹‰</a>æœ¬èº«æ˜¯æ’žçƒé«˜æ‰‹ï¼Œé™¤äº†ç§‘å­¦è¯¾ç¨‹ï¼Œéœç‰¹ä¹Ÿå¿…é¡»ä¸Šæ’žçƒè¯¾æ¥ç²¾ç†ŸæŠ€å·§ï¼Œåªæ˜¯ä»–å³ä½¿è®¤çœŸè‹¦ç»ƒï¼Œä¸Šåœºæ—¶ä¾ç„¶æƒ¨è¾“åŒå‰§æ¼”å‘˜éº¦å¯?å¤ä¾¬ï¼Œéœç‰¹ç¬‘è¯´ï¼šâ€œæˆ‘æœ‰ä¸€åœºæˆè¦è·Ÿéº¦å¯ä¸€èµ·æ‰“æ’žçƒï¼Œå½©æŽ’æ—¶ä»–å°±ä¸€è¿žæ‰“å‡ºå¥½çƒï¼Œæˆ‘å³ä½¿æœ‰æ•™ç»ƒé™ªç€æ¶è¡¥è¿˜æ˜¯è¿œä¸åŠä»–ã€‚â€</p>
+<figure id="attachment_11376336" aria-describedby="caption-attachment-11376336" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/0710-1.jpg"><img class="size-large wp-image-11376336" src="https://i.epochtimes.com/assets/uploads/2019/07/0710-1-600x401.jpg" alt="ç”µå½±ã€Šç”µæµå¤§æˆ˜ã€‹ï¼ˆThe Current Warï¼‰" width="600" b="401" /></a><figcaption id="caption-attachment-11376336" class="wp-caption-text">ç”µå½±ã€Šç”µæµå¤§æˆ˜ã€‹ï¼ˆThe Current Warï¼‰å‰§ç…§ã€‚ï¼ˆCATCHPLAYæä¾›ï¼‰</figcaption></figure>
+<p>è¯¥ç‰‡å¡å¸é›†ç»“â€œ<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E5%A5%87%E5%BC%82%E5%8D%9A%E5%A3%AB.md#1">å¥‡å¼‚åšå£«</a>â€ç­å°¼ç‹„å…‹?<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E5%BA%B7%E6%9F%8F%E6%8B%9C%E5%8C%BA.md#1">åº·æŸæ‹œåŒº</a>ï¼ˆBenedict Cumberbatchï¼‰ã€â€œXæˆ˜è­¦é‡Žå…½â€å°¼å¯æ‹‰æ–¯?éœç‰¹ï¼ˆNicholas Houltï¼‰ã€â€œå°èœ˜è››â€æ±¤å§†?éœå…°å¾·ï¼ˆTom Hollandï¼‰å’Œéº¦å¯?å¤ä¾¬ï¼ˆMichael Shannonï¼‰ç­‰äººã€‚</p>
+<p>ç”µå½±å‰§æƒ…æè¿°19ä¸–çºªçˆ±è¿ªç”Ÿã€ç‰¹æ–¯æ‹‰ä¸Žè¥¿å±‹ç”µæ°”åˆ›åŠžäººå¨æ–¯æ±€è±ªæ–¯ä¹‹é—´é‡Žå¿ƒå‹ƒå‹ƒçš„å•†åœºä¹‹äº‰ï¼Œç”±é‡‘å¥–åå¯¼é©¬ä¸?å²æŸ¯è¥¿æ–¯ï¼ˆMartin Scorseseï¼‰ç›‘åˆ¶ã€è‰¾æ–¹ç´¢?æˆˆæ¢…å…¹?é›·ç¼ï¼ˆAlfonso Gomez-Rejonï¼‰æ‰§å¯¼ã€‚è¯¥ç‰‡å°†äºŽ7æœˆ19æ—¥åœ¨å°æ¹¾ä¸Šæ˜ ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šè¾›å¹¼å®‰</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/10/n11376310.htm">¡°ÆæÒì²©Ê¿¡±°çÑÝ°®µÏÉú ÉÏ¿Î¶ñ²¹¿ÆÑ§ÖªÊ¶</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/6/n11304212.htm">¡¶µçÁ÷´óÕ½¡·Äá¿ÉÀ­Ë¹»ôÌØÚ¹ÊÍ¸Ä±äÊÀ½çµÄÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/1/n11226932.htm">°àÄáµÒ¿ËÚ¹ÊÍ°®µÏÉú ÉÏÑÝ¡¶µçÁ÷´óÕ½¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/10/7/n9709869.htm">°®µÏÉú·¢½±Ñ§½ð Ã¿ÈËËÄÄêÄÃËÄÍò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/3/8/n8888802.htm">°®µÏÉú¡°´©Ô½Ê±¿Õ¡±£¿ Â½Ð¡Ñ§½Ì²ÄÔÙ³ö´í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/1/1/n8655639.htm">2016µçÓ°Ö®¡°×î¡±£º»½ÐÑÓÂÆøºÍÁ¼ÖªµÄÒ»Äê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/12/7/n8568931.htm">¡¶ÆæÒì²©Ê¿¡·ÖÐµÄ¶«·½ÐÞÁ¶ÎÄ»¯ÄÚÔÌ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/21/n7576106.htm">Ì¨Íå2²úÆ·ÈëÑ¡ÃÀ°®µÏÉú·¢Ã÷´ó½±</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11369890.htm">ÖÐ¹²×Ê½ð¸ÉÔ¤³õÑ¡Ãñµ÷ Ì¨ÍøÃ½¶­ÊÂ³¤ÊÕ»ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11374259.htm">ÈýÏ¿´ó°Ó´æ±äÐÎÒþ»¼ Ê©¹¤¼àÀíÅûÂ¶ÖÊÁ¿ÊÂ¹Ê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11374597.htm">ÖÐ¹²ÑÏ¿Ø¸Û¸®ÐÞÀýÊ§°ÜÏûÏ¢ ºúÎý½ø·¢ÌûÔâ·í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11374372.htm">²»µ½Ò»ÖÜ ´óÂ½4¼ÒÉÏÊÐ¹«Ë¾¶­ÊÂ³¤±»×¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229726.htm">¡¾ÏÍºó´«¡¿´ó½Å»Êºó±³×ÅÉËÖØÕÉ·òÌÓ³öÏÕ¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11354386.htm">ÊÍåÈÄ²ÄáÓëËûµÄ¼ÒÈË£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353576.htm">ÃüÔËÌì¶¨Âð£¿ÎºáçÊµ¼ÊÑéÖ¤ÈÃËû¾ªÌ¾£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/8/1/n4493541.htm">·çË®±¦µØ×¨ÕÒÊ²Ã´ÑùµÄÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370428.htm">¸°ÁªºÏ¹úÑÝ½²·´ËÍÖÐ ºÎÔÏÊ«ÐÐÇ°¼ÄÓï´ßÈËÀáÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11373803.htm">»Æ×ÓÙ®ÆØÌáÇ×¹ý³Ì ÃÏ¼Ò¾ÜÆ¸½ð¸ÄÊÕ°éÊÖÀñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370553.htm">¸æ±ðÑÝ³ª»áÈ÷ÀáÏÖ³¡ ·ÑÓñÇå£ºÀë±ðÄÑÒÔËµ³ö¿Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372496.htm">Ì·Ó½÷ëÖÓÕòÌÎ³Å¾¯ ÍøÓÑÓõÃÀ¹úÖØÉóÆäÑÝ³öÇ©Ö¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11370167.htm">ÔÙ²Î¼Ó¾ÅÁú·´ËÍÖÐ´óÓÎÐÐ Ò¶µÂæµ£ºÏã¸Û³Å×¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372326.htm">¡¾ÐÂÎÅ¿´µã¡¿ÈýÏ¿´ó°Ó±äÐÎ£¿ÕæÕýÎ£»úÊÇÊ²Ã´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/3/n11362438.htm">¡¾ÐÂÎÅ¿´µã¡¿¸ÛÃñ³å»÷Á¢·¨»á ±±¾©½ÇÉ«¹îÒì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/4/n11364455.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖØÆôÌ¸ÅÐ ÃÀ3´óÓÅÊÆ±±¾©ÄÑ±ÈÄâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372326.htm">¡¾ÐÂÎÅ¿´µã¡¿ÈýÏ¿´ó°Ó±äÐÎ£¿ÕæÕýÎ£»úÊÇÊ²Ã´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372291.htm">Ïã¸Û·´ËÍÖÐÐÂ¼Æ»®£ºÈ«Ãñµ½ÖÐ¹úÒøÐÐÈ¡Ç®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11371647.htm">µ¥ÈÕ´Ý»Ù23Á¾Ì¹¿Ë ÃÀ¾üA-10¹¥»÷»ú´´¼ÍÂ¼</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/4/21/n7576106.md#1">å°æ¹¾2äº§å“å…¥é€‰ç¾Žçˆ±è¿ªç”Ÿå‘æ˜Žå¤§å¥–</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/12/7/n8568931.md#1">ã€Šå¥‡å¼‚åšå£«ã€‹ä¸­çš„ä¸œæ–¹ä¿®ç‚¼æ–‡åŒ–å†…è•´</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/17/1/1/n8655639.md#1">2016ç”µå½±ä¹‹â€œæœ€â€ï¼šå”¤é†’å‹‡æ°”å’Œè‰¯çŸ¥çš„ä¸€å¹´</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/17/3/8/n8888802.md#1">çˆ±è¿ªç”Ÿâ€œç©¿è¶Šæ—¶ç©ºâ€ï¼Ÿ é™†å°å­¦æ•™æå†å‡ºé”™</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/10/n11376310.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/11/n11861529.md#1">ç˜Ÿç–«æ¥åŠ¿æ±¹æ±¹  ä¸ºä½•ç»•å¼€äº†è¿™äº›äºº</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">ä¿¡å¸ˆä¿¡æ³•ã€€ä¸€è·¯å‰è¡Œï¼ˆä¸‹ï¼‰</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11971400.md#1">æœ€æ–°ç¿»å¢™è½¯ä»¶ çªç ´å°é”è®¿é—®å¤§çºªå…ƒæ–°å”äºº</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11970670.md#1">åŽæ˜¥èŽ¹æ‰¾ä¸Šç¾Žå›½åŠ¡é™¢å‘è¨€äººè¾©è®º åˆé­æ¼åº•</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11970667.md#1">ä»»å¿—å¼ºè§†é¢‘çƒ­ä¼  æ‰¹ä¸­å…±ä½“åˆ¶çƒ‚é€ åå›½äººæŽ¨å¢™</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11972610.md#1">6ä¸‡æ­¦æ±‰äººå°åŸŽå‰å¤–é€ƒ è·¯çº¿ä¸Žæ¬§ç¾Žç–«æƒ…å»åˆï¼Ÿ</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11972094.md#1">æ‚ä¸ä½äº† å¤§é™†é‡‘èžç³»ç»Ÿè‡³å°‘åƒäººæŸ“ä¸­å…±ç—…æ¯’</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11973180.md#1">è¾›é¾™æ†”æ‚´èµ´çµå ‚ çž’ç€å¥³å„¿è¯´ï¼šå¦ˆå¦ˆåŽ»æ—…è¡Œäº†</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/25/n11973870.md#1">è¾›é¾™çµå ‚ä¼´å¦»5å°æ—¶ åŒæ‰‹åˆåç¦»å¼€æœªå—è®¿</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11969412.md#1">åˆ˜çœŸçµå ‚é¢„è®¡25æ—¥å¼€æ”¾ è¿½æ€ä¼šä¸‹æœˆä¸¾è¡Œ</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11971575.md#1">å®£ä¼ æ–°ç‰‡æ—¶è‡ªç§°äºšè£” åˆ˜äº¦è²é­å¤§é™†ç½‘æ°‘éª‚ç¿»</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/23/n11967623.md#1">æ™’åˆç…§æ‚¼å¿µåˆ˜çœŸ ç¿è™¹ï¼šé—æ†¾æ— æ³•å®žçŽ°èˆžæž—ä¹‹çº¦</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/22/n11962482.md#1">ã€ŠæŽ¨èƒŒå›¾ã€‹ç¬¬7è±¡å½’åº è°ˆåºšå­æµå¹´</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/23/n11967225.md#1">æˆè§„æ¨¡æ¯ç­äº‹ä»¶ä¸­çš„æ‚¬æ¡ˆ æ˜ŽæœçŽ‹æ­åŽ‚å¤§çˆ†ç‚¸</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/2/27/n11900217.md#1">ã€åŽ†å²ä¸Šçš„ç˜Ÿç–«ã€‘ä¸Šå¸ä¹‹éž­ï¼šæ¬§æ´²é»‘æ­»ç—…</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/20/3/24/n11969439.md#1">ä¸­å›½å¤ä»£çš„â€œé£žå¤©â€èˆžè¹ˆå®¶</a></li>
+<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/2/3/n3792263.md#1">ç±³å¼€æœ—åŸºç½—ï¼ˆ2ï¼‰ æˆåä½œã€Šåœ£æ®‡ã€‹</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/cqgugh3693/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/cqgugh3693/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/10/n11376310.htm">â€œå¥‡å¼‚åšå£«â€æ‰®æ¼”çˆ±è¿ªç”Ÿ ä¸Šè¯¾æ¶è¡¥ç§‘å­¦çŸ¥è¯†</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cqgugh3693/djy/blob/master/gb/19/7/10/n11376310.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/cqgugh3693/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/cqgugh3693/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
