--- a/gb/18/11/22/n10867079.md
+++ b/gb/18/11/22/n10867079.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cwxvfm3918/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cwxvfm3918/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cwxvfm3918/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cwxvfm3918/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cwxvfm3918/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>繁华一瞬终是梦 忠诚永恒驻青史</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年11月22日讯】在<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E3%80%8A%E7%AC%91%E8%B0%88%E9%A3%8E%E4%BA%91%E3%80%8B.md">《笑谈风云》</a>第三季<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E3%80%8A%E9%9A%8B%E5%94%90%E7%9B%9B%E4%B8%96%E3%80%8B.md">《隋唐盛世》</a>中，<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E7%AB%A0%E5%A4%A9%E4%BA%AE.md">章天亮</a>博士给我们讲述了中国历史的黄金时代——盛唐。到了“开元盛世”之后的天宝年间，公元755年到公元763年，发生了持续八年的“安史之乱”。</p>
+<p>【大纪元2018年11月22日讯】在<ahref="https://github.com/cwxvfm3918/djy/blob/master/gb/tag/%E3%80%8A%E7%AC%91%E8%B0%88%E9%A3%8E%E4%BA%91%E3%80%8B.md#1">《笑谈风云》</a>第三季<ahref="https://github.com/cwxvfm3918/djy/blob/master/gb/tag/%E3%80%8A%E9%9A%8B%E5%94%90%E7%9B%9B%E4%B8%96%E3%80%8B.md#1">《隋唐盛世》</a>中，<ahref="https://github.com/cwxvfm3918/djy/blob/master/gb/tag/%E7%AB%A0%E5%A4%A9%E4%BA%AE.md#1">章天亮</a>博士给我们讲述了中国历史的黄金时代——盛唐。到了“开元盛世”之后的天宝年间，公元755年到公元763年，发生了持续八年的“安史之乱”。</p>
 <p><span class="Apple-converted-space">?</span>两宋不仅结束了“安史之乱”到五代十国的纷纷乱像，也让长期受到严重破坏的经济和文化，得以恢复和发展；科技和商业更是长足发展；娱乐业达到前所未有的繁荣；文学家和哲学家辈出。</p>
 <p><b>经济富裕</b></p>
 <p>两宋在中国历史上是非常富裕的时代，甚至可以说是中国历代王朝中最富裕的时代。</p>
@@ -27,42 +27,53 @@
 <p>宋高宗绍兴十年（公元1140年）金兀术撕毁和议，大举入侵！五月金军大败于顺昌，七月大败于郾城，此时的形势对南宋非常有利，两河忠义纷纷打出“岳家军”的旗号对抗金兵，金兀术准备放弃燕京以南的所有领土撤退……</p>
 <p><span class="Apple-converted-space">?</span>眼看北宋光复在即，而宋高宗却一天连下十二道金牌召岳飞班师…奸臣秦桧以“莫须有”的罪名，抓捕并害死岳飞，制造了南宋最大的冤案。从此再也没有人能够大破金兵，直捣黄龙府…而岳飞所留下的千秋忠烈之气激荡古今。八百年后，岳王庙前苍松翠柏，游人如织，人们仍然崇敬和缅怀这位民族英雄……</p>
 <p><span class="Apple-converted-space">?</span>《两宋繁华》讲述了自“安史之乱”后分裂的“五代十国”，北宋统一，宋辽对峙，熙宁变法，靖康之耻，铁木真统一草原，蒙古横扫欧亚大陆，一直到崖山海战，忽必烈灭亡南宋，大约五百多年的历史。</p>
-<p>为满足大家节日送礼的需求，目前《两宋繁华》的DVD和CD已经开始预售，在线观看和收听将于12月1日上线。前3季《东周列国》、《秦皇汉武》、<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E3%80%8A%E9%9A%8B%E5%94%90%E7%9B%9B%E4%B8%96%E3%80%8B.md">《隋唐盛世》</a>的DVD和CD有七折的限期优惠。详情请上官网：xtfy.ntdtv.com</p>
+<p>为满足大家节日送礼的需求，目前《两宋繁华》的DVD和CD已经开始预售，在线观看和收听将于12月1日上线。前3季《东周列国》、《秦皇汉武》、<ahref="https://github.com/cwxvfm3918/djy/blob/master/gb/tag/%E3%80%8A%E9%9A%8B%E5%94%90%E7%9B%9B%E4%B8%96%E3%80%8B.md#1">《隋唐盛世》</a>的DVD和CD有七折的限期优惠。详情请上官网：xtfy.ntdtv.com</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/18/11/22/n10867079.htm">繁华一瞬终是梦 忠诚永恒驻青史</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/5/26/n11280385.htm">三国名人的夏日情趣“浮瓜沉李”怎么玩？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/5/27/n11283146.htm">【征文】德音：忆梦三秦（上）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/4/17/n11193952.htm">一堆金子摆在他面前 他却放声大哭</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/4/1/n11155331.htm">青松絮语：海浪的力量</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883841.htm">【新闻看点】中共驱逐美3记者 真正原因不说</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11758244.htm">【三国英雄11】乱世枭雄袁绍（文字版）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878224.htm">你做对了吗？ 常见的面包储藏迷思</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/11/4/n10829827.md#1">《笑谈风云》第一集 风云莫测（1）</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/11/7/n10835417.md#1">《笑谈风云》第一集 风云莫测（2）</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/11/7/n10836420.md#1">《笑谈风云》第一集 风云莫测（3）</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/11/7/n10836538.md#1">《笑谈风云》第一集 风云莫测（4）</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/11/14/n10851133.md#1">《笑谈风云》第二集 飞来横祸（1）</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/11/16/n10856816.md#1">《笑谈风云》第二集 飞来横祸（2）</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/10/30/n13340507.md#1">唐太宗怎么教太子平天下？（12）</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/6/n13358100.md#1">神迹奇事：舍利子穿透物体  宋代大科学家也无解</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/7/n13358708.md#1">中国传统纹样撷趣（二）——佛家文化中的纹样</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/4/n13351988.md#1">文明奇技：铜镜能透光能预卜 阴阳鱼洗盆能喷泉</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/18/11/22/n10867079.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/10/n13368067.md#1">【古韵流芳】大清国母 雄才大略的孝庄文皇后</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/5/n13356561.md#1">【百年真相】自由独立之殇 大师陈寅恪无处安身</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/5/n13356235.md#1">【未解之谜】外星人访谈录（1） 神秘的包裹</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/10/n13367097.md#1">实用人体艺术体态语视频 助您提升高雅气质</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/7/n13358604.md#1">【舞蹈三剑客】神韵舞蹈演员的一天</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/12/n13372388.md#1">【古韵流芳】盛德君子颜真卿 流芳百世的风采</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/12/n13372756.md#1">【秦鹏直播】黄明志再推新歌 两岸人都看哭了</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/12/n13371990.md#1">【新闻大家谈】拜习视频会 习抛烫手山芋？</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13368832.md#1">江西玛莎拉蒂女司机被起底 真实身份曝光</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13369584.md#1">中共六中全会公报含五个要点 藏三分断代</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/10/n13367964.md#1">遭封杀逾两个月 赵薇“现身”双11新海报</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/10/n13367964.md#1">遭封杀逾两个月 赵薇“现身”双11新海报</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13368315.md#1">狄龙儿子自曝养家压力大 望获封视帝帮补生计</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13370514.md#1">55岁李若彤挑战举重 身材纤细手臂肌肉发达</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/12/n13370777.md#1">黄晓明拍戏被搧十巴掌致耳鸣 拍完还安慰对方</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13370355.md#1">女星演绎“紫霞仙子微笑”失败 朱茵暖心回应</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/10/n13367464.md#1">茶很多人喝错了！教你正确喝茶 1秘诀更养生</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13368638.md#1">躺着就能放松肌肉 每天10分钟改善身体紧绷</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/12/n13371465.md#1">银行户头多11万英镑 英男买房后才知惨了</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13369079.md#1">【健康1+1】吹哨人揭：辉瑞疫苗临床试验3大问题</a></li>
+<li><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/21/11/11/n13370097.md#1">维生素C不只防感冒 有4大好处 补充留意1点</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cwxvfm3918/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cwxvfm3918/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/22/n10867079.htm">繁华一瞬终是梦 忠诚永恒驻青史</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cwxvfm3918/djy/blob/master/gb/18/11/22/n10867079.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cwxvfm3918/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cwxvfm3918/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cwxvfm3918/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwxvfm3918/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
